# bempp

./: bempp_setup.py
installer/py_modules/: armadillo.py  swig.py  tbb.py  tools.py
tests/unit/: CMakeLists.txt
tests/unit/grid/: test_grid.cpp
